# lang-identification

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json
src/: .data_manager.h.swp  common.h  data_manager.h  def.h  evaluate.cc  main.cc  what_lang.cc
src/model/: model.h  params.h
